src/parser/snapshots/antsi__parser__markup__tests__decoration_multiple_styles_no_content.snap
---
source: src/parser/markup.rs
expression: markup(&mut parser)
---
Some(
    Styled {
        content: [],
        style: Style {
            foreground: None,
            background: None,
            decoration: Some(
                {
                    Dim,
                    Italic,
                },
            ),
        },
    },
)
