src/parser/snapshots/antsi__parser__markup__tests__foreground_no_content.snap
---
source: src/parser/markup.rs
expression: markup(&mut parser)
---
Some(
    Styled {
        content: [],
        style: Style {
            foreground: Some(
                Red,
            ),
            background: None,
            decoration: None,
        },
    },
)
