src/parser/snapshots/antsi__parser__markup__tests__nested_token.snap
---
source: src/parser/markup.rs
expression: markup(&mut parser)
---
Some(
    Styled {
        content: [
            Styled {
                content: [
                    Content(
                        "inner",
                    ),
                ],
                style: Style {
                    foreground: None,
                    background: Some(
                        Blue,
                    ),
                    decoration: None,
                },
            },
        ],
        style: Style {
            foreground: Some(
                Red,
            ),
            background: None,
            decoration: None,
        },
    },
)
