src/parser/snapshots/antsi__parser__markup__tests__numeric_content.snap
---
source: src/parser/markup.rs
expression: markup(&mut parser)
---
Some(
    Styled {
        content: [
            Content(
                "12345",
            ),
        ],
        style: Style {
            foreground: Some(
                Red,
            ),
            background: None,
            decoration: None,
        },
    },
)
